# instax_filter

./: .gitignore  README.md  instax_filter.py  pyproject.toml
.agents/skills/release/: SKILL.md
.agents/skills/release-notes/: SKILL.md
.github/workflows/: build.yml
app/: .gitignore  README.md  TECHNICAL_DESIGN.md  build.sh  project.yml
app/InstaxApp/: AppModel.swift  ContentView.swift  InstaxApp.swift
app/InstaxApp.xcodeproj/: project.pbxproj
app/InstaxApp.xcodeproj/xcshareddata/xcschemes/: InstaxApp.xcscheme
app/InstaxAppTests/: ProcessingIntegrationTests.swift
app/InstaxBridge/: InstaxApp-Bridging-Header.h  InstaxBridge.h  InstaxBridge.mm
app/scripts/: build-opencv.sh
cpp/: CMakeLists.txt  README.md  benchmark.py
cpp/include/instax/: application.hpp  cli_options.hpp  frame_renderer.hpp  image_processor.hpp  mode_config.hpp  processing_engine.hpp
cpp/src/: application.cpp  cli_options.cpp  frame_renderer.cpp  image_processor.cpp  main.cpp  mode_config.cpp  processing_engine.cpp
docs/: benchmark.md  benchmark.py
instax/: __init__.py  storage.py
python/: README.md  instax_filter.py  pyproject.toml
python/instax/: __init__.py  cli.py  config.py  engine.py  frame.py
python/tests/: test_instax_filter.py
tests/: test_instax_filter.py
