[project]
name = "instax-filter"
version = "0.1.0"
description = "A detailed Fujifilm Instax-inspired photo filter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "opencv-python-headless>=4.10,<5",
    "pillow>=11.0",
    "pillow-heif>=1.1",
]

[project.scripts]
instax-filter = "instax_filter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["instax_filter.py"]
